1.向ddns服務更新目前的IP

--- a/app.json
+++ b/app.json
@@ -1,6 +1,8 @@
 
 {
     "afraid":{
-            "token" : "afraid_token"
-        }
+      "url": "https://freedns.afraid.org",
+      "path": "/dynamic/update.php",
+      "token" : "afraid_token"
+    }
 }
