1.加入 postgresql 操作

--- a/app.json
+++ b/app.json
@@ -1,8 +1,15 @@
 
 {
-    "afraid":{
-      "url": "https://freedns.afraid.org",
-      "path": "/dynamic/update.php",
-      "token" : "afraid_token"
-    }
+  "afraid": {
+    "url": "https://freedns.afraid.org",
+    "path": "/dynamic/update.php",
+    "token": "afraid_token"
+  },
+  "postgresql": {
+    "host": "host",
+    "port": 5432,
+    "user": "user",
+    "password": "password",
+    "db": "db"
+  }
 }
