--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,3 +27,4 @@ dotenv = "0.15.0"
 concat-string = "1.0.1"
 futures ="0.3"
 tokio-test = "0.4.2"
+sqlx = { version = "0.6", features = [ "runtime-tokio-native-tls" , "postgres","time", "chrono"] }
