--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,7 +27,7 @@ dotenv = "0.15.0"
 concat-string = "1.0.1"
 futures ="0.3"
 tokio-test = "0.4.2"
-sqlx = { version = "0.6", features = [ "runtime-tokio-native-tls" , "postgres","time", "chrono" ,"decimal"] }
+sqlx = { version = "0.6", features = [ "runtime-tokio-native-tls" , "postgres","time", "chrono" ,"decimal","macros"] }
 schemars = "0.8.3"
 rust_decimal = "1.28.0"
 rust_decimal_macros = "1.28.0"
