--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,7 @@ edition = "2021"
 [dependencies]
 chrono = { version = "0.4", features = ["serde"] }
 clokwerk = "0.4.0"
-reqwest = { path ="../../opensource/reqwest", features = ["json","blocking"] }
+reqwest = { path ="../reqwest", features = ["json","blocking"] }
 tokio = { version = "1", features = ["full"] }
 log = { version = "^0.4.17", features = ["std"] }
 rocket = "0.5.0-rc.2"
@@ -35,3 +35,4 @@ encoding = "0.2"
 scraper = "0.15.0"
 anyhow = "1.0"
 crossbeam-channel = "0.5.7"
+num_cpus = "1.15.0"
