1.使用 telegram 提醒本日進行除權息的股票有那些

--- a/app.json
+++ b/app.json
@@ -11,5 +11,11 @@
     "user": "user",
     "password": "password",
     "db": "db"
+  },
+  "bot": {
+    "telegram": {
+      "allowed": {},
+      "token": ""
+    }
   }
 }
