1.增加下載上市、櫃收盤報價

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,8 +32,10 @@ schemars = "0.8.3"
 rust_decimal = "1.29"
 rust_decimal_macros = "1.29"
 encoding = "0.2"
-scraper = "0.16"
+scraper = "0.16.0"
 anyhow = "1.0"
 crossbeam-channel = "0.5.7"
 num_cpus = "1.15.0"
 regex = "1"
+ttl_cache = "0.5.1"
+
