--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,7 @@ clokwerk = "0.4.0"
 reqwest = { path ="../reqwest", features = ["json","blocking"] }
 tokio = { version = "1", features = ["full"] }
 log = { version = "^0.4.17", features = ["std"] }
-rocket = "0.5.0-rc.3"
+#rocket = "0.5.0-rc.3"
 slog = { version = "2.7", features = ["max_level_trace", "release_max_level_debug"] }
 slog-async = "2.7"
 slog-term = "2.9"
@@ -32,7 +32,7 @@ schemars = "0.8.3"
 rust_decimal = "1.29"
 rust_decimal_macros = "1.29"
 encoding = "0.2"
-scraper = "0.16.0"
+scraper = "0.16"
 anyhow = "1.0"
 crossbeam-channel = "0.5.7"
 num_cpus = "1.15.0"
