--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,7 @@ edition = "2021"
 [dependencies]
 chrono = { version = "0.4", features = ["serde"] }
 clokwerk = "0.4.0"
-reqwest = { path ="../reqwest", features = ["json","blocking"] }
+reqwest = { version = "0.11", features = ["json","blocking"] }
 tokio = { version = "1", features = ["full"] }
 log = { version = "^0.4.17", features = ["std"] }
 #rocket = "0.5.0-rc.3"
@@ -40,3 +40,4 @@ regex = "1"
 ttl_cache = "0.5.1"
 rayon = "1.7.0"
 crossbeam = "0.8.2"
+async-trait = "0.1.68"
