--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,13 +12,8 @@ reqwest = { version = "0.11", features = ["json","blocking"] }
 tokio = { version = "1", features = ["full"] }
 log = { version = "^0.4.17", features = ["std"] }
 #rocket = "0.5.0-rc.3"
-slog = { version = "2.7", features = ["max_level_trace", "release_max_level_debug"] }
-slog-async = "2.7"
-slog-term = "2.9"
 lazy_static = "1.4.0"
-once_cell = "1.17.0"
-slog-atomic = "3.1.0"
-flume = "0.10.14"
+once_cell = "1.17"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 serde_derive = "1.0"
@@ -28,18 +23,18 @@ concat-string = "1.0.1"
 futures ="0.3"
 tokio-test = "0.4.2"
 sqlx = { version = "0.6", features = [ "runtime-tokio-native-tls" , "postgres","time", "chrono" ,"decimal","macros"] }
-schemars = "0.8.3"
 rust_decimal = "1.29"
 rust_decimal_macros = "1.29"
 encoding = "0.2"
 scraper = "0.16"
 anyhow = "1.0"
-crossbeam-channel = "0.5.7"
+crossbeam-channel = "0.5"
 num_cpus = "1.15.0"
 regex = "1"
 ttl_cache = "0.5.1"
-rayon = "1.7.0"
-crossbeam = "0.8.2"
-async-trait = "0.1.68"
-redis = "0.23.0"
-deadpool-redis = "0.12.0"
+rayon = "1.7"
+crossbeam = "0.8"
+async-trait = "0.1"
+redis = "0.23"
+deadpool-redis = "0.12"
+rand ="0.8"
