--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,18 +7,18 @@ edition = "2021"
 
 [dependencies]
 chrono = { version = "0.4", features = ["serde"] }
-clokwerk = "0.4.0"
+tokio-cron-scheduler = "0.9"
 reqwest = { version = "0.11", features = ["json","blocking"] }
 tokio = { version = "1", features = ["full"] }
 log = { version = "^0.4.17", features = ["std"] }
 #rocket = "0.5.0-rc.3"
-lazy_static = "1.4.0"
+lazy_static = "1.4"
 once_cell = "1.17"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 serde_derive = "1.0"
-config = "0.13.3"
-dotenv = "0.15.0"
+config = "0.13"
+dotenv = "0.15"
 concat-string = "1.0.1"
 futures ="0.3"
 tokio-test = "0.4.2"
@@ -29,12 +29,13 @@ encoding = "0.2"
 scraper = "0.16"
 anyhow = "1.0"
 crossbeam-channel = "0.5"
-num_cpus = "1.15.0"
+num_cpus = "1.15"
 regex = "1"
-ttl_cache = "0.5.1"
+ttl_cache = "0.5"
 rayon = "1.7"
 crossbeam = "0.8"
 async-trait = "0.1"
 redis = "0.23"
 deadpool-redis = "0.12"
 rand ="0.8"
+urlencoding = "2.1"
