--- a/Cargo.toml
+++ b/Cargo.toml
@@ -39,3 +39,8 @@ redis = "0.23"
 deadpool-redis = "0.12"
 rand ="0.8"
 urlencoding = "2.1"
+tonic ={ version = "0.9", features = ["transport", "tls", "channel", "gzip"] }
+prost = "0.11"
+
+[build-dependencies]
+tonic-build = "0.9.2"
