--- a/Cargo.toml
+++ b/Cargo.toml
@@ -41,6 +41,7 @@ rand ="0.8"
 urlencoding = "2.1"
 tonic ={ version = "0.9", features = ["transport", "tls", "channel", "gzip"] }
 prost = "0.11"
+tokio-retry = "0.3"
 
 [build-dependencies]
 tonic-build = "0.9.2"
