1.使用 std::sync::OnceLock 替換 once_cell::sync::OnceCell 2.變更afraid API 位置 3.reqwest開啟brotli、deflate、gzip

--- a/app.json
+++ b/app.json
@@ -1,8 +1,8 @@
 
 {
   "afraid": {
-    "url": "https://freedns.afraid.org",
-    "path": "/dynamic/update.php",
+    "url": "https://sync.afraid.org",
+    "path": "/u",
     "token": "afraid_token"
   },
   "postgresql": {
