--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,7 @@ edition = "2021"
 [dependencies]
 chrono = { version = "0.4", features = ["serde"] }
 tokio-cron-scheduler = "0.9"
-reqwest = { version = "0.11", features = ["json","blocking"] }
+reqwest = { version = "0.11", features = ["json", "blocking", "brotli", "deflate", "gzip"] }
 tokio = { version = "1", features = ["full"] }
 log = { version = "^0.4.17", features = ["std"] }
 #rocket = "0.5.0-rc.3"
@@ -23,8 +23,8 @@ concat-string = "1.0.1"
 futures ="0.3"
 tokio-test = "0.4.2"
 sqlx = { version = "0.6", features = [ "runtime-tokio-native-tls" , "postgres","time", "chrono" ,"decimal","macros"] }
-rust_decimal = "1.29"
-rust_decimal_macros = "1.29"
+rust_decimal = "1.30"
+rust_decimal_macros = "1.30"
 encoding = "0.2"
 scraper = "0.16"
 anyhow = "1.0"
