--- a/Cargo.toml
+++ b/Cargo.toml
@@ -42,6 +42,7 @@ urlencoding = "2.1"
 tonic ={ version = "0.9", features = ["transport", "tls", "channel", "gzip"] }
 prost = "0.11"
 tokio-retry = "0.3"
+hashbrown = "0.14"
 
 [build-dependencies]
 tonic-build = "0.9.2"
