--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,7 +22,6 @@ dotenv = "0.15"
 concat-string = "1.0.1"
 futures ="0.3"
 tokio-test = "0.4.2"
-sqlx = { version = "0.6", features = [ "runtime-tokio-native-tls" , "postgres","time", "chrono" ,"decimal","macros"] }
 rust_decimal = "1.30"
 rust_decimal_macros = "1.30"
 encoding = "0.2"
@@ -43,6 +42,7 @@ tonic ={ version = "0.9", features = ["transport", "tls", "channel", "gzip"] }
 prost = "0.11"
 tokio-retry = "0.3"
 hashbrown = "0.14"
+sqlx = { version = "0.7", features = [ "runtime-tokio", "postgres", "time", "chrono", "bigdecimal", "macros", "rust_decimal"] }
 
 [build-dependencies]
 tonic-build = "0.9.2"
