--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,7 @@ edition = "2021"
 [dependencies]
 chrono = { version = "0.4", features = ["serde"] }
 tokio-cron-scheduler = "0.9"
-reqwest = { version = "0.11", features = ["json", "blocking", "brotli", "deflate", "gzip"] }
+reqwest = { version = "0.11", features = ["json", "blocking", "brotli", "deflate", "gzip", "cookies"] }
 tokio = { version = "1", features = ["full"] }
 log = { version = "^0.4", features = ["std"] }
 #rocket = "0.5.0-rc.3"
