--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -31,12 +31,18 @@ jobs:
     - name: Install PostgreSQL client
       run: sudo apt-get -yqq install postgresql-client
 
+    - name: Run SQL script
+      run: psql -h localhost -U user -d db -a -f etc/sql/init.sql
+
+
     - name: Install protoc
       run: |
         sudo apt-get update
         sudo apt-get install -y protobuf-compiler
+
     - name: Verify protoc installation
       run: protoc --version
+
     - name: Build
       run: cargo build --verbose
     #- name: Run tests
