--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -34,7 +34,8 @@ jobs:
     - name: Run SQL file
       run: |
         export PGPASSWORD=password
-        psql -h localhost -U user -d db -a -f etc/sql/init.sql
+        psql -h localhost -U user -d db -a -f etc/sql/market_category.sql
+        psql -h localhost -U user -d db -a -f etc/sql/stocks.sql
 
     - name: Install protoc
       run: |
