--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -36,6 +36,7 @@ jobs:
         export PGPASSWORD=password
         psql -h localhost -U user -d db -a -f etc/sql/market_category.sql
         psql -h localhost -U user -d db -a -f etc/sql/stocks.sql
+        psql -h localhost -U user -d db -a -f etc/sql/daily_quote.sql
 
     - name: Install protoc
       run: |
