--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -38,6 +38,7 @@ jobs:
         psql -h localhost -U user -d db -a -f etc/sql/stocks.sql
         psql -h localhost -U user -d db -a -f etc/sql/daily_quote.sql
         psql -h localhost -U user -d db -a -f etc/sql/daily_money_history.sql
+        psql -h localhost -U user -d db -a -f etc/sql/dividend.sql
 
     - name: Install protoc
       run: |
