--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -40,6 +40,8 @@ jobs:
         psql -h localhost -U user -d db -a -f etc/sql/daily_money_history.sql
         psql -h localhost -U user -d db -a -f etc/sql/dividend.sql
         psql -h localhost -U user -d db -a -f etc/sql/dividend_record_detail.sql
+        psql -h localhost -U user -d db -a -f etc/sql/stock_word.sql
+        psql -h localhost -U user -d db -a -f etc/sql/stock_index.sql
 
     - name: Install protoc
       run: |
