--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -38,6 +38,8 @@ jobs:
         psql -h localhost -U user -d db -a -f etc/sql/stocks.sql
         psql -h localhost -U user -d db -a -f etc/sql/daily_quote.sql
         psql -h localhost -U user -d db -a -f etc/sql/daily_money_history.sql
+        psql -h localhost -U user -d db -a -f etc/sql/daily_money_history_detail.sql
+        psql -h localhost -U user -d db -a -f etc/sql/daily_money_history_detail_more.sql
         psql -h localhost -U user -d db -a -f etc/sql/dividend.sql
         psql -h localhost -U user -d db -a -f etc/sql/dividend_record_detail.sql
         psql -h localhost -U user -d db -a -f etc/sql/stock_word.sql
