--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -34,6 +34,7 @@ jobs:
     - name: Run SQL file
       run: |
         export PGPASSWORD=password
+        psql -h localhost -U user -d db -a -f etc/sql/config.sql
         psql -h localhost -U user -d db -a -f etc/sql/daily_quote.sql
         psql -h localhost -U user -d db -a -f etc/sql/daily_money_history.sql
         psql -h localhost -U user -d db -a -f etc/sql/daily_money_history_detail.sql
