--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -37,6 +37,7 @@ jobs:
         psql -h localhost -U user -d db -a -f etc/sql/config.sql
         psql -h localhost -U user -d db -a -f etc/sql/estimate.sql
         psql -h localhost -U user -d db -a -f etc/sql/financial_statement.sql
+        psql -h localhost -U user -d db -a -f etc/sql/index.sql
         psql -h localhost -U user -d db -a -f etc/sql/daily_quote.sql
         psql -h localhost -U user -d db -a -f etc/sql/daily_money_history.sql
         psql -h localhost -U user -d db -a -f etc/sql/daily_money_history_detail.sql
