--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -47,6 +47,7 @@ jobs:
         psql -h localhost -U user -d db -a -f etc/sql/index.sql
         psql -h localhost -U user -d db -a -f etc/sql/last_daily_quotes.sql
         psql -h localhost -U user -d db -a -f etc/sql/market_category.sql
+        psql -h localhost -U user -d db -a -f etc/sql/quote_history_record.sql
         psql -h localhost -U user -d db -a -f etc/sql/stocks.sql
         psql -h localhost -U user -d db -a -f etc/sql/stock_word.sql
         psql -h localhost -U user -d db -a -f etc/sql/stock_index.sql
