--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -49,6 +49,7 @@ jobs:
         psql -h localhost -U user -d db -a -f etc/sql/market_category.sql
         psql -h localhost -U user -d db -a -f etc/sql/quote_history_record.sql
         psql -h localhost -U user -d db -a -f etc/sql/revenue.sql
+        psql -h localhost -U user -d db -a -f etc/sql/revenue_last_date.sql
         psql -h localhost -U user -d db -a -f etc/sql/stocks.sql
         psql -h localhost -U user -d db -a -f etc/sql/stock_word.sql
         psql -h localhost -U user -d db -a -f etc/sql/stock_index.sql
