--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -51,6 +51,7 @@ jobs:
         psql -h localhost -U user -d db -a -f etc/sql/revenue.sql
         psql -h localhost -U user -d db -a -f etc/sql/revenue_last_date.sql
         psql -h localhost -U user -d db -a -f etc/sql/stock_exchange_market.sql
+        psql -h localhost -U user -d db -a -f etc/sql/stock_industry.sql
         psql -h localhost -U user -d db -a -f etc/sql/stocks.sql
         psql -h localhost -U user -d db -a -f etc/sql/stock_word.sql
         psql -h localhost -U user -d db -a -f etc/sql/stock_index.sql
