1..更新 workflowrk 檔，增加 Redis

--- a/app.json
+++ b/app.json
@@ -25,9 +25,9 @@
   },
   "nosql": {
     "redis": {
-      "addr": "addr",
-      "account": "account",
-      "password": "password",
+      "addr": "localhost:6379",
+      "account": "",
+      "password": "",
       "db": 0
     }
   },
