--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -83,3 +83,4 @@ jobs:
       run: cargo test --verbose
       env:
         RUST_BACKTRACE: 1
+        DATABASE_URL: postgres://user:password@localhost:5432/db
