1. 更新 workflows 檔案

--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -84,3 +84,8 @@ jobs:
       env:
         RUST_BACKTRACE: 1
         DATABASE_URL: postgres://user:password@localhost:5432/db
+        POSTGRESQL_HOST: 127.0.0.1
+        POSTGRESQL_PORT: 5432
+        POSTGRESQL_USER: user
+        POSTGRESQL_PASSWORD: password
+        POSTGRESQL_DB: db
