--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -75,7 +75,7 @@ jobs:
       run: cargo build --verbose
 
     - name: Run tests
-      run: cargo test --release --verbose
+      run: cargo test --release
       env:
         RUST_BACKTRACE: 1
         DATABASE_URL: postgres://user:password@localhost:5432/db
