--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,7 @@
 name = "stock_crawler"
 version = "0.1.0"
 edition = "2021"
-
+authors = ["Eddie <eddiea.chen@gmail.com>"]
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
