1.增加抓取年度EPS資訊，數據來源︰元大證券、富邦證券、嘉實資訊-理財網

--- a/Dockerfile_live
+++ b/Dockerfile_live
@@ -14,8 +14,8 @@ WORKDIR /app
 EXPOSE 9001
 
 ADD ./target/release/stock_crawler .
-ADD ./bin/.env .
-ADD ./bin/app.json .
+ADD ./.env .
+ADD ./app.json .
 
 VOLUME ["/app/log", "/opt/nginx/ssl/jiansoft.mooo.com"]
 
