1.更新 ddns 加入 dynu 的服務

--- a/app.json
+++ b/app.json
@@ -10,6 +10,10 @@
     "path": "/u",
     "token": "afraid_token"
   },
+  "dyny": {
+    "username": "username",
+    "password": "password"
+  },
   "postgresql": {
     "host": "localhost",
     "port": 5432,
