--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,7 +13,7 @@ tokio = { version = "1", features = ["full"] }
 log = { version = "^0.4", features = ["std"] }
 #rocket = "0.5.0-rc.3"
 lazy_static = "1.4"
-once_cell = "1.18"
+once_cell = "1.19"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 serde_derive = "1.0"
@@ -34,7 +34,7 @@ ttl_cache = "0.5"
 rayon = "1.8"
 crossbeam = "0.8"
 async-trait = "0.1"
-redis = "0.23"
+redis = "0.24"
 deadpool-redis = "0.13"
 rand ="0.8"
 urlencoding = "2.1"
@@ -45,6 +45,9 @@ hashbrown = "0.14"
 sqlx = { version = "0.7", features = [ "runtime-tokio", "postgres", "time", "chrono", "bigdecimal", "macros", "rust_decimal"] }
 strum = { version = "0.25", features = ["derive"]}
 strum_macros = "0.25"
+sha2 = { version = "0.10", features = [] }
+digest = "0.10"
+hex = "0.4"
 
 [build-dependencies]
 tonic-build = "0.10"
