1.配合 Yahoo 調整版面更改 selector 路徑

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,7 +34,7 @@ ttl_cache = "0.5"
 rayon = "1.8"
 crossbeam = "0.8"
 async-trait = "0.1"
-redis = "0.24"
+redis = { version = "0.23", features = ["tokio-comp"]  }
 deadpool-redis = "0.13"
 rand ="0.8"
 urlencoding = "2.1"
