--- a/app.json
+++ b/app.json
@@ -14,6 +14,11 @@
     "username": "username",
     "password": "password"
   },
+  "noip": {
+    "username": "username",
+    "password": "password",
+    "hostnames": []
+  },
   "postgresql": {
     "host": "localhost",
     "port": 5432,
