1.編譯改在docker內執行

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -48,6 +48,7 @@ tokio-test = "0.4"
 tonic = { version = "0.11", features = ["transport", "tls", "channel", "gzip"] }
 ttl_cache = "0.5"
 urlencoding = "2.1"
+openssl = { version = "0.10", features = ["vendored"] }
 
 [build-dependencies]
 tonic-build = "0.11"
