--- a/Dockerfile_live
+++ b/Dockerfile_live
@@ -1,25 +1,20 @@
-# 使用 Rust 官方的 bookworm 版本作為建構階段的基礎映像
-FROM rust:bookworm as builder
+FROM rust:alpine as builder
 
 WORKDIR /app
 
 COPY . .
 
-RUN apt update && apt install -y protobuf-compiler openssl pkg-config libssl-dev libprotobuf-dev && rm -rf /var/lib/apt/lists/*
+RUN apk add --no-cache musl-dev openssl-dev protobuf perl make
 
 RUN cargo build --release
 
-FROM debian:bookworm
+FROM alpine:latest
 
+RUN apk add --no-cache libgcc tzdata
 # 設定環境變量，將時區設為 UTC+8
 ENV TZ=Asia/Taipei
 
-# 安裝 tzdata，並根據 TZ 環境變量自動設定時區
-RUN apt-get update && apt-get install -y tzdata ca-certificates && \
-    ln -snf /usr/share/zoneinfo/$TZ /etc/localtime && \
-    echo $TZ > /etc/timezone && \
-    apt-get clean && \
-    rm -rf /var/lib/apt/lists/*
+RUN ln -snf /usr/share/zoneinfo/$TZ /etc/localtime && echo $TZ > /etc/timezone
 
 # 設定工作目錄
 WORKDIR /app
