--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,23 +13,23 @@ chrono = { version = "0.4", features = ["serde"] }
 concat-string = "1.0.1"
 config = "0.15"
 #crossbeam = "0.8"
-crossbeam-channel = "0.5"
-deadpool-redis = "0.18"
-digest = "0.10"
+#crossbeam-channel = "0.5"
+deadpool-redis = "0.19.0"
+#digest = "0.10"
 dotenv = "0.15"
 encoding = "0.2"
 futures ="0.3"
 hashbrown = "0.15"
 hex = "0.4"
-lazy_static = "1.5"
-log = { version = "^0.4", features = ["std"] }
+#lazy_static = "1.5"
+#log = { version = "^0.4", features = ["std"] }
 num_cpus = "1.16"
 once_cell = "1.20"
-openssl = { version = "0.10", features = ["vendored"] }
+#openssl = { version = "0.10", features = ["vendored"] }
 prost = "0.13"
 rand = "0.9"
 rayon = "1.10"
-redis = { version = "0.28", features = ["tokio-comp"]  }
+#redis = { version = "0.28", features = ["tokio-comp"]  }
 regex = "1"
 reqwest = { version = "0.12", features = ["json", "blocking", "brotli", "deflate", "gzip", "cookies", "zstd"] }
 rust_decimal = "1.36"
