--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,7 +14,7 @@ concat-string = "1.0.1"
 config = "0.15"
 #crossbeam = "0.8"
 #crossbeam-channel = "0.5"
-deadpool-redis = "0.19.0"
+deadpool-redis = "0.20.0"
 #digest = "0.10"
 dotenv = "0.15"
 encoding = "0.2"
@@ -24,7 +24,7 @@ hex = "0.4"
 #lazy_static = "1.5"
 #log = { version = "^0.4", features = ["std"] }
 num_cpus = "1.16"
-once_cell = "1.20"
+once_cell = "1.21"
 #openssl = { version = "0.10", features = ["vendored"] }
 prost = "0.13"
 rand = "0.9"
@@ -32,9 +32,9 @@ rayon = "1.10"
 #redis = { version = "0.28", features = ["tokio-comp"]  }
 regex = "1"
 reqwest = { version = "0.12", features = ["json", "blocking", "brotli", "deflate", "gzip", "cookies", "zstd"] }
-rust_decimal = "1.36"
-rust_decimal_macros = "1.36"
-scraper = "0.22.0"
+rust_decimal = "1.37"
+rust_decimal_macros = "1.37"
+scraper = "0.23.1"
 serde = { version = "1.0", features = ["derive"] }
 serde_derive = "1.0"
 serde_json = "1.0"
@@ -42,13 +42,13 @@ sha2 = { version = "0.10", features = [] }
 sqlx = { version = "0.8", features = [ "runtime-tokio", "postgres", "time", "chrono", "bigdecimal", "macros", "rust_decimal"] }
 strum = { version = "0.27.0", features = ["derive"]}
 strum_macros = "0.27.0"
-tokio = { version = "1.43", features = ["full"] }
+tokio = { version = "1.44", features = ["full"] }
 tokio-cron-scheduler = "0.13"
 tokio-retry = "0.3"
 tokio-test = "0.4"
-tonic = { version = "0.12", features = ["transport", "tls", "channel", "gzip"] }
+tonic = { version = "0.13.0", features = ["transport", "channel", "tls-ring", "gzip"] }
 ttl_cache = "0.5"
 urlencoding = "2.1"
 
 [build-dependencies]
-tonic-build = "0.12"
+tonic-build = "0.13.0"
