--- a/Cargo.toml
+++ b/Cargo.toml
@@ -49,6 +49,8 @@ tokio-test = "0.4"
 tonic = { version = "0.13.0", features = ["transport", "channel", "tls-ring", "gzip"] }
 ttl_cache = "0.5"
 urlencoding = "2.1"
+lazy_static = "1.5.0"
+scopeguard = "1.2.0"
 
 [build-dependencies]
 tonic-build = "0.13.0"
