Update year, dependencies, and improve data handling logic
Updated processing functions to target 2025, modified database queries for more robust date matching, and switched `visit` parameter from "5904" to "2912." Upgraded `deadpool-redis` and `num_cpus` dependencies for stability. Adjusted Docker setup for compatibility with updated Rust and Alpine versions.

--- a/Dockerfile_live
+++ b/Dockerfile_live
@@ -1,10 +1,10 @@
-FROM rust:alpine AS builder
+FROM rust:1.87-alpine3.20 AS builder
 
 WORKDIR /app
 
 COPY . .
 
-RUN apk add --no-cache libressl-dev build-base musl-dev libssl3 libcrypto3  protobuf perl make libgcc libstdc++
+RUN apk add --no-cache libressl-dev build-base musl-dev libssl3 libcrypto3 protobuf perl make libgcc libstdc++
 
 RUN cargo build --release
 
