--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,22 +19,23 @@ deadpool-redis = "0.22"
 dotenv = "0.15"
 encoding = "0.2"
 futures ="0.3"
-hashbrown = "0.15"
+hashbrown = "0.16"
 hex = "0.4"
 #lazy_static = "1.5"
 #log = { version = "^0.4", features = ["std"] }
 num_cpus = "1.17"
 once_cell = "1.21"
 #openssl = { version = "0.10", features = ["vendored"] }
-prost = "0.13"
+prost = "0.14"
 rand = "0.9"
-rayon = "1.10"
+tonic-prost = "0.14"
+rayon = "1.11"
 #redis = { version = "0.28", features = ["tokio-comp"]  }
 regex = "1"
-reqwest = { version = "0.12", features = ["json", "blocking", "brotli", "deflate", "gzip", "cookies", "zstd"] }
-rust_decimal = "1.37"
-rust_decimal_macros = "1.37"
-scraper = "0.23"
+reqwest = { version = "0.13", features = ["json", "form", "blocking", "brotli", "deflate", "gzip", "cookies", "zstd", "http2", "hickory-dns"] }
+rust_decimal = "1.40"
+rust_decimal_macros = "1.40"
+scraper = "0.24"
 serde = { version = "1.0", features = ["derive"] }
 serde_derive = "1.0"
 serde_json = "1.0"
@@ -42,15 +43,15 @@ sha2 = { version = "0.10", features = [] }
 sqlx = { version = "0.8", features = [ "runtime-tokio", "postgres", "time", "chrono", "bigdecimal", "macros", "rust_decimal"] }
 strum = { version = "0.27", features = ["derive"]}
 strum_macros = "0.27"
-tokio = { version = "1.45", features = ["full"] }
-tokio-cron-scheduler = "0.14"
+tokio = { version = "1.49", features = ["full"] }
+tokio-cron-scheduler = "0.15"
 tokio-retry = "0.3"
 tokio-test = "0.4"
-tonic = { version = "0.13", features = ["transport", "channel", "tls-ring", "gzip"] }
+tonic = { version = "0.14", features = ["transport", "channel", "tls-ring", "gzip"] }
 ttl_cache = "0.5"
 urlencoding = "2.1"
-lazy_static = "1.5.0"
-scopeguard = "1.2.0"
+lazy_static = "1.5"
+scopeguard = "1.2"
 
 [build-dependencies]
-tonic-build = "0.13"
+tonic-prost-build = "0.14"
