Update dependencies and enhance `.gitignore`
Upgraded `rand` to 0.10, `scraper` to 0.25, and added `parking_lot` and `tokio-stream` libraries to support new functionality. Improved `.gitignore` by adding entries for runtime artifacts, IDE files, and local SSL assets for better development environment management.

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,25 @@
-/target
-/log
-/.idea
-.env
+# Rust build artifacts
+/target/
+/debug/
+/release/
+
+# Rustfmt / rust-analyzer backups
+**/*.rs.bk
+
+# Cargo lockfile
+# Keep this ignored only if you intentionally do not version it.
 Cargo.lock
-/etc/ssl
+
+# Local runtime artifacts
+/log/
+/*.log
+
+# IDE
+/.idea/
+
+# Local configuration / secrets
+.env
+.env.*
+
+# Local SSL assets
+/etc/ssl/
