--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,9 +25,10 @@ hex = "0.4"
 #log = { version = "^0.4", features = ["std"] }
 num_cpus = "1.17"
 once_cell = "1.21"
+parking_lot = "0.12"
 #openssl = { version = "0.10", features = ["vendored"] }
 prost = "0.14"
-rand = "0.9"
+rand = "0.10"
 tonic-prost = "0.14"
 rayon = "1.11"
 #redis = { version = "0.28", features = ["tokio-comp"]  }
@@ -35,7 +36,7 @@ regex = "1"
 reqwest = { version = "0.13", features = ["json", "form", "blocking", "brotli", "deflate", "gzip", "cookies", "zstd", "http2", "hickory-dns"] }
 rust_decimal = "1.40"
 rust_decimal_macros = "1.40"
-scraper = "0.24"
+scraper = "0.25"
 serde = { version = "1.0", features = ["derive"] }
 serde_derive = "1.0"
 serde_json = "1.0"
@@ -46,6 +47,7 @@ strum_macros = "0.27"
 tokio = { version = "1.49", features = ["full"] }
 tokio-cron-scheduler = "0.15"
 tokio-retry = "0.3"
+tokio-stream = "0.1"
 tokio-test = "0.4"
 tonic = { version = "0.14", features = ["transport", "channel", "tls-ring", "gzip"] }
 ttl_cache = "0.5"
