--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,7 +25,7 @@ hex = "0.4"
 #log = { version = "^0.4", features = ["std"] }
 num_cpus = "1.17"
 once_cell = "1.21"
-parking_lot = "0.12"
+#parking_lot = "0.12"
 #openssl = { version = "0.10", features = ["vendored"] }
 prost = "0.14"
 rand = "0.10"
