--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,7 +33,8 @@ tonic-prost = "0.14"
 rayon = "1.11"
 #redis = { version = "0.28", features = ["tokio-comp"]  }
 regex = "1"
-reqwest = { version = "0.13", features = ["json", "form", "blocking", "brotli", "deflate", "gzip", "cookies", "zstd", "http2", "hickory-dns"] }
+reqwest = { version = "0.13", default-features = false, features = ["rustls-no-provider", "charset", "json", "form", "brotli", "gzip", "cookies", "zstd", "http2"] }
+rustls = { version = "0.23", features = ["ring"] }
 rust_decimal = "1.40"
 rust_decimal_macros = "1.40"
 scraper = "0.25"
