Add Fugle crawler module for intraday stock quotes and integrate it into the existing fallback system
Added a new `fugle` module that integrates Fugle's intraday stock quotes API into the application, providing real-time stock price and quote data. Implemented rate limiting mechanisms to comply with API constraints. Updated configuration to support `FUGLE_API_KEY`. Enhanced fallback logic to include Fugle among quote providers. Updated README and tests accordingly.

--- a/app.json
+++ b/app.json
@@ -10,6 +10,9 @@
     "path": "/u",
     "token": "afraid_token"
   },
+  "fugle": {
+    "api_key": ""
+  },
   "dyny": {
     "username": "username",
     "password": "password"
